# emosense

./: .gitignore  AGENTS.md  LICENSE  README.md  config  pytest.ini  requirements.txt  run_demo.sh
.github/workflows/: ci.yml
demo_data/: README.md  sus_scoring.py  test_dreamer.mat  test_dreamer_new.mat  test_nan_electrodes.mat  test_seedv.npz  test_seedv_realistic.npz  test_signal.csv
docker/: Dockerfile  docker-compose.yml
emokit_stub/: pyproject.toml
emokit_stub/emokit/: __init__.py
emokit_stub/emokit/datasets/: __init__.py
emokit_stub/emokit/features/: __init__.py
emokit_stub/emokit/features/eeg/: __init__.py
emokit_stub/emokit/models/: __init__.py
emokit_stub/emokit/utils/: __init__.py
emosense/: __init__.py  __main__.py  app.py
emosense/backend/: __init__.py  file_parser.py  inference.py  processing_engine.py  server.py  signal_buffer.py  stream_receiver.py
emosense/config/: models.yaml
emosense/data_loader/: __init__.py  replay.py
emosense/visualization/: __init__.py  contribution.py  topo_map.py  va_plot.py  waveform_sync.py
results/: latency_benchmark.json  latency_benchmark.tex
scripts/: analyze_user_study.py  benchmark_latency.py  create_test_mat.py  extract_demo_trials.py  generate_demo_checkpoints.py  stress_test_session.py  verify_demo.py
tests/: test_backend.py  test_e2e.py  test_file_parser.py  test_processing_engine.py  test_real_data.py  test_replay_pipeline.py  test_server.py  test_visualization.py
